--- a/playbooks/pglogical/pglogical-master-config.yml
+++ b/playbooks/pglogical/pglogical-master-config.yml
@@ -57,7 +57,7 @@
         query: |
           SELECT pglogical.create_node(
             node_name := '{{ ansible_hostname }}',
-            dsn := 'host={{ ansible_host }} dbname=pglogical_db user=pglogical_user password=securepassword'
+            dsn := 'host={{ master_private_ip }} dbname=pglogical_db user=pglogical_user password=securepassword'
           );
       become_user: postgres
       when: node_check.rowcount == 0
