--- a/playbooks/repmgr/repmgr_primary.yml
+++ b/playbooks/repmgr/repmgr_primary.yml
@@ -119,6 +119,8 @@
           host  replication       {{ repmgr_user }}  127.0.0.1/32  md5  port=6588
           host {{ repmgr_db }}    {{ repmgr_user }}  {{ master_private_ip }}/24   md5  port=6588
           host replication        {{ repmgr_user }}  {{ master_private_ip }}/24   md5  port=6588
+          host {{ repmgr_db }}    {{ repmgr_user }}  {{ master_private_ip }}/24   md5
+          host replication        {{ repmgr_user }}  {{ master_private_ip }}/24   md5
           host    replication     pglogical_user    0.0.0.0/0     md5  port=6588
           host    all             pglogical_user    0.0.0.0/0     md5  port=6588
     - name: Reload PostgreSQL
