--- a/playbooks/repmgr/repmgr_standby.yml
+++ b/playbooks/repmgr/repmgr_standby.yml
@@ -37,14 +37,14 @@
         path: /etc/postgresql/12/main/pg_hba.conf
         insertafter: '^# IPv4 local connections:'
         block: |
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_master }}  md5
-          host  replication       {{ repmgr_user }}  {{ network_subnet_master }}  md5
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5
-          host  replication       {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
-          host  replication       {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
-          host    replication     pglogical_user    0.0.0.0/0     md5
-          host    all             pglogical_user    0.0.0.0/0     md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_master }}  md5 port=6588
+          host  replication       {{ repmgr_user }}  {{ network_subnet_master }}  md5 port=6588
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5 port=6588
+          host  replication       {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5 port=6588
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5 port=6588
+          host  replication       {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5 port=6588
+          host    replication     pglogical_user    0.0.0.0/0     md5 port=6588
+          host    all             pglogical_user    0.0.0.0/0     md5 port=6588
 
     - name: Restart PostgreSQL immediately
       systemd:
@@ -84,6 +84,7 @@
         sudo -u postgres env PGPASSWORD={{ repmgr_password }}
         repmgr
         -h {{ master_private_ip }}
+        -p 6588
         -U {{ repmgr_user }}
         -d {{ repmgr_db }}
         -f {{ repmgr_config_path }}
