--- a/playbooks/repmgr/repmgr_primary.yml
+++ b/playbooks/repmgr/repmgr_primary.yml
@@ -105,24 +105,22 @@
         path: /etc/postgresql/12/main/pg_hba.conf
         insertafter: '^# IPv4 local connections:'
         block: |
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_master }}  md5  port=6588
-          host  replication       {{ repmgr_user }}  {{ network_subnet_master }}  md5  port=6588
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5  port=6588
-          host  replication       {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5  port=6588
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5  port=6588
-          host  replication       {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5  port=6588
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ worker1_private_ip }}  md5  port=6588
-          host  replication       {{ repmgr_user }}  {{ worker1_private_ip }}  md5  port=6588
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ worker2_private_ip }}  md5  port=6588
-          host  replication       {{ repmgr_user }}  {{ worker2_private_ip }}  md5  port=6588
-          host  {{ repmgr_db }}   {{ repmgr_user }}  127.0.0.1/32  md5  port=6588
-          host  replication       {{ repmgr_user }}  127.0.0.1/32  md5  port=6588
-          host {{ repmgr_db }}    {{ repmgr_user }}  {{ master_private_ip }}/24   md5  port=6588
-          host replication        {{ repmgr_user }}  {{ master_private_ip }}/24   md5  port=6588
-          host {{ repmgr_db }}    {{ repmgr_user }}  {{ master_private_ip }}/24   md5
-          host replication        {{ repmgr_user }}  {{ master_private_ip }}/24   md5
-          host    replication     pglogical_user    0.0.0.0/0     md5  port=6588
-          host    all             pglogical_user    0.0.0.0/0     md5  port=6588
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_master }}  md5
+          host  replication       {{ repmgr_user }}  {{ network_subnet_master }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5
+          host  replication       {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
+          host  replication       {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ worker1_private_ip }}  md5
+          host  replication       {{ repmgr_user }}  {{ worker1_private_ip }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ worker2_private_ip }}  md5
+          host  replication       {{ repmgr_user }}  {{ worker2_private_ip }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  127.0.0.1/32  md5
+          host  replication       {{ repmgr_user }}  127.0.0.1/32  md5
+          host {{ repmgr_db }}    {{ repmgr_user }}  {{ master_private_ip }}/32   md5
+          host replication        {{ repmgr_user }}  {{ master_private_ip }}/32   md5
+          host    replication     pglogical_user    0.0.0.0/0     md5
+          host    all             pglogical_user    0.0.0.0/0     md5
     - name: Reload PostgreSQL
       systemd:
         name: "{{ repmgr_service_name }}"
@@ -160,6 +158,7 @@
       shell: >
         sudo -u postgres repmgr
         -f {{ repmgr_config_path }}
+        -p 6588
         primary register --force
       register: primary_register
       failed_when: "primary_register.rc not in [0,1]"
