--- a/playbooks/repmgr/repmgr_primary.yml
+++ b/playbooks/repmgr/repmgr_primary.yml
@@ -117,8 +117,8 @@
           host  replication       {{ repmgr_user }}  {{ worker2_private_ip }}  md5
           host  {{ repmgr_db }}   {{ repmgr_user }}  127.0.0.1/32  md5
           host  replication       {{ repmgr_user }}  127.0.0.1/32  md5
-          host {{ repmgr_db }}    {{ repmgr_user }}  {{ master_private_ip }}/32   md5
-          host replication        {{ repmgr_user }}  {{ master_private_ip }}/32   md5
+          host {{ repmgr_db }}    {{ repmgr_user }}  {{ master_private_ip }}   md5
+          host replication        {{ repmgr_user }}  {{ master_private_ip }}   md5
           host    replication     pglogical_user    0.0.0.0/0     md5
           host    all             pglogical_user    0.0.0.0/0     md5
     - name: Reload PostgreSQL
