--- a/playbooks/repmgr/repmgr_standby.yml
+++ b/playbooks/repmgr/repmgr_standby.yml
@@ -37,12 +37,14 @@
         path: /etc/postgresql/12/main/pg_hba.conf
         insertafter: '^# IPv4 local connections:'
         block: |
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_master }}
-          host  replication       {{ repmgr_user }}  {{ network_subnet_master }}
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker1 }}
-          host  replication       {{ repmgr_user }}  {{ network_subnet_worker1 }}
-          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker2 }}
-          host  replication       {{ repmgr_user }}  {{ network_subnet_worker2 }}
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_master }}  md5
+          host  replication       {{ repmgr_user }}  {{ network_subnet_master }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5
+          host  replication       {{ repmgr_user }}  {{ network_subnet_worker1 }}  md5
+          host  {{ repmgr_db }}   {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
+          host  replication       {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
+          host    repmgr  repmgr  0.0.0.0/0  md5
+          host    replication  repmgr  0.0.0.0/0  md5
           host    replication     pglogical_user    0.0.0.0/0     md5
           host    all             pglogical_user    0.0.0.0/0     md5
 
