--- a/inventory.example
+++ b/inventory.example
@@ -2,8 +2,8 @@
 master ansible_host=192.168.1.224 ansible_user=vagrant repmgr_node_id=1 repmgr_node_name=master
 
 [worker_nodes]
-worker1 ansible_host=192.168.1.233 worker_private_ip=10.0.0.5 ansible_user=vagrant repmgr_node_id=2 repmgr_node_name=worker1
-worker2 ansible_host=192.168.1.251 worker_private_ip=10.0.0.6 ansible_user=vagrant repmgr_node_id=3 repmgr_node_name=worker2
+worker1 ansible_host=192.168.1.233 worker_private_ip=10.0.0.5 other_worker_private_ip=10.0.0.6 ansible_user=vagrant repmgr_node_id=2 repmgr_node_name=worker1
+worker2 ansible_host=192.168.1.251 worker_private_ip=10.0.0.6 other_worker_private_ip=10.0.0.5 ansible_user=vagrant repmgr_node_id=3 repmgr_node_name=worker2
 
 [all:vars]
 master_private_ip=10.0.0.4
