removed some tasks

--- a/playbooks/pglogical/pglogical-master-config.yml
+++ b/playbooks/pglogical/pglogical-master-config.yml
@@ -68,22 +68,22 @@
       become_user: postgres
       when: node_check.rowcount == 0
 
-    - name: Subscribe to standby 1 node
-      community.postgresql.postgresql_query:
-        db: pglogical_db
-        query: |
-          SELECT pglogical.create_subscription(
-            subscription_name := 'subscription_{{ ansible_hostname }}',
-            provider_dsn := 'host={{ worker1_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
-          );
-      become_user: postgres
+    # - name: Subscribe to standby 1 node
+    #   community.postgresql.postgresql_query:
+    #     db: pglogical_db
+    #     query: |
+    #       SELECT pglogical.create_subscription(
+    #         subscription_name := 'subscription_{{ ansible_hostname }}',
+    #         provider_dsn := 'host={{ worker1_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
+    #       );
+    #   become_user: postgres
 
-    - name: Subscribe to standby 2 node
-      community.postgresql.postgresql_query:
-        db: pglogical_db
-        query: |
-          SELECT pglogical.create_subscription(
-            subscription_name := 'subscription_{{ ansible_hostname }}',
-            provider_dsn := 'host={{ worker2_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
-          );
-      become_user: postgres
+    # - name: Subscribe to standby 2 node
+    #   community.postgresql.postgresql_query:
+    #     db: pglogical_db
+    #     query: |
+    #       SELECT pglogical.create_subscription(
+    #         subscription_name := 'subscription_{{ ansible_hostname }}',
+    #         provider_dsn := 'host={{ worker2_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
+    #       );
+    #   become_user: postgres
