--- a/playbooks/pglogical/pglogical-workers-config.yml
+++ b/playbooks/pglogical/pglogical-workers-config.yml
@@ -2,16 +2,16 @@
   hosts: worker_nodes
   become: yes
   tasks:
-    - name: Add standby node to pglogical
-      community.postgresql.postgresql_query:
-        db: pglogical_db
-        query: |
-          SELECT pglogical.create_node(
-            node_name := '{{ ansible_hostname }}',
-            dsn := 'host={{ worker_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
-          );
-        login_port: 6588
-      become_user: postgres
+    # - name: Add standby node to pglogical
+    #   community.postgresql.postgresql_query:
+    #     db: pglogical_db
+    #     query: |
+    #       SELECT pglogical.create_node(
+    #         node_name := '{{ ansible_hostname }}',
+    #         dsn := 'host={{ worker_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
+    #       );
+    #     login_port: 6588
+    #   become_user: postgres
       
     - name: Subscribe to primary node
       community.postgresql.postgresql_query:
@@ -24,14 +24,14 @@
         login_port: 6588
       become_user: postgres
 
-    - name: Subscribe to other standby nodes
-      community.postgresql.postgresql_query:
-        db: pglogical_db
-        query: |
-          SELECT pglogical.create_subscription(
-            subscription_name := 'subscription_{{ ansible_hostname }}',
-            provider_dsn := 'host={{ other_worker_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
-          );
-        login_port: 6588
-      become_user: postgres
+    # - name: Subscribe to other standby nodes
+    #   community.postgresql.postgresql_query:
+    #     db: pglogical_db
+    #     query: |
+    #       SELECT pglogical.create_subscription(
+    #         subscription_name := 'subscription_{{ ansible_hostname }}',
+    #         provider_dsn := 'host={{ other_worker_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
+    #       );
+    #     login_port: 6588
+    #   become_user: postgres
 
