fix sudo problem

--- a/playbooks/pglogical/pglogical-workers-config.yml
+++ b/playbooks/pglogical/pglogical-workers-config.yml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
     - name: Promote standby node to read-write mode
-      shell: "sudo -u postgres /usr/lib/postgresql/12/bin/pg_ctl promote -D /var/lib/postgresql/12/main"
+      shell: "/usr/lib/postgresql/12/bin/pg_ctl promote -D /var/lib/postgresql/12/main"
       become_user: postgres
       ignore_errors: yes
 
@@ -24,7 +24,7 @@
       ignore_errors: yes
 
     - name: Revert standby node to recovery mode
-      shell: "sudo -u postgres /usr/lib/postgresql/12/bin/pg_ctl restart -D /var/lib/postgresql/12/main -m fast"
+      shell: "/usr/lib/postgresql/12/bin/pg_ctl restart -D /var/lib/postgresql/12/main -m fast"
       become_user: postgres
       ignore_errors: yes
       
