--- a/playbooks/pglogical/pglogical-workers-config.yml
+++ b/playbooks/pglogical/pglogical-workers-config.yml
@@ -14,7 +14,7 @@
     - name: Check if node is already configured
       community.postgresql.postgresql_query:
         db: pglogical_db
-        query: "SELECT node_name FROM pglogical.node WHERE node_name = '{{ ansible_hostname }}';"
+        query: "SELECT node_name FROM pglogical.node WHERE node_name = '{{ ansible_hostname1 }}';"
         login_port: 6588
       become_user: postgres
       register: node_check
@@ -24,7 +24,7 @@
         db: pglogical_db
         query: |
           SELECT pglogical.create_node(
-            node_name := '{{ ansible_hostname }}',
+            node_name := '{{ ansible_hostname1 }}',
             dsn := 'host={{ worker_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
           );
         login_port: 6588
@@ -39,6 +39,7 @@
         type: schema
         roles: pglogical_user
         objs: pglogical
+        login_port: 6588
         state: present
       become_user: postgres
 
@@ -56,7 +57,7 @@
         db: pglogical_db
         query: |
           SELECT pglogical.create_subscription(
-            subscription_name := 'subscription_{{ ansible_hostname }}',
+            subscription_name := 'subscription_{{ ansible_hostname1 }}',
             provider_dsn := 'host={{ master_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
           );
         login_port: 6588
@@ -67,7 +68,7 @@
         db: pglogical_db
         query: |
           SELECT pglogical.create_subscription(
-            subscription_name := 'subscription_{{ ansible_hostname }}',
+            subscription_name := 'subscription_{{ ansible_hostname1 }}',
             provider_dsn := 'host={{ other_worker_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
           );
         login_port: 6588
